--- a/2 ano/EAD/atividade10/index.html
+++ b/2 ano/EAD/atividade10/index.html
@@ -10,6 +10,16 @@
     <h1>Andrei</h1>
     <h2>Sou estudando no UNISENAI</h2>
     <h3>começando na carreira de TI</h3>
+    <h1 class="text-primary">texto azul</h1>
+<h1 class="text-success">texto verde</h1>
+<h1 class="text-info">texto verde água</h1>
+<h1 class="text-danger">texto vermelho</h1>
+<h1 class="text-dark">texto cor escura</h1>
+<h1 class="text-white bg-dark">texto cor branca e fundo escuro</h1>
+<h1 class="invisible">texto invisível em cores</h1>
+<h1 class="bg-info">neste caso o fundo é azul claro</hi>
+<h1 class="bg-success text-danger">neste caso o fundo é verde e cor vermelho do texto</h1>
+<h1 class="text-warning">texto amarelo</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
